2009-12-05  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Move update-webkit into BuildSteps
        https://bugs.webkit.org/show_bug.cgi?id=32181

        We need to move update-webkit out of SCM.py because SCM isn't supposed to know
        that WebKit exists.  The proper place for the knowledge of the existence of
        update-webkit is in WebKitPort because some ports have specialized update
        scripts (analogous to build-webkit).

        * Scripts/modules/buildsteps.py:
        * Scripts/modules/commands/download.py:
        * Scripts/modules/landingsequence.py:
        * Scripts/modules/scm.py:
        * Scripts/modules/webkitport.py:

2009-12-05  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        update-webkit should call git svn rebase and resolve-ChangeLogs -f
        https://bugs.webkit.org/show_bug.cgi?id=27162

        Teach update-webkit about Git.  I didn't add the call to
        resolve-ChangeLogs -f because sometimes that script goes bananas.  We
        can iterate from here, however.

        * Scripts/update-webkit:

2009-12-04  Yael Aharon  <yael.aharon@nokia.com>

        Unreviewed build fix.

        [Qt] build fix after r51634 removed unused QBoxLayout include which included limits.h.

        * DumpRenderTree/qt/DumpRenderTree.cpp:

2009-12-04  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Adam Treat.

        Add some missing methods for showing and hiding the
        Web Inspector.

        * DumpRenderTree/qt/DumpRenderTree.cpp:
        (WebCore::WebPage::WebPage):
        (WebCore::WebPage::~WebPage):
        (WebCore::WebPage::webInspector):
        * DumpRenderTree/qt/DumpRenderTree.h:
        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::showWebInspector):
        (LayoutTestController::hideWebInspector):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:
